--- a/src/index.css
+++ b/src/index.css
@@ -6,14 +6,13 @@
 
 body {
   font-family: "montserrat", sans-serif;
-  background-color: #223343;
+  /* background-color: #223343; */
 }
-header {
-  padding: 50px 15px 0px;
-}
-header h1 {
-  color: white;
-  font-size: 48px;
-  font-weight: 500;
-  text-align: center;
+
+#cardBody {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  color: black;
 }
